<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <!--                    <TextView-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:text="@string/hint_url"-->
                    <!--                        android:textSize="20sp"/>-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_url"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:hintAnimationEnabled="true"
                        app:startIconDrawable="@drawable/ic_download_url">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textUri" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/current_state_hint"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/current_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/current_state_text"
                        android:textAlignment="textEnd"
                        android:textColor="@color/blue_700"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/current_progress_hint"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/progress_num"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/current_progress_numb"
                        android:textAlignment="textEnd"
                        android:textSize="18sp" />
                </LinearLayout>


                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:indeterminate="false"
                    android:max="100"

                    android:progressTint="@color/blue_900" />

                <!--                <com.google.android.material.progressindicator.LinearProgressIndicator-->
                <!--                    android:id="@+id/progress_linear"-->
                <!--                    android:layout_margin="10dp"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content" />-->

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thread_number"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:paddingStart="10dp" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/thread_num_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:valueFrom="2"
                        android:valueTo="8"
                        android:value="5"
                        android:stepSize="1"
                        app:tickVisible="false"
                        app:labelBehavior="floating"
                        app:thumbColor="@color/blue_500"
                        app:trackColor="@color/blue_200" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="297dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toStartOf="@id/switch_delete_slices"
                        android:paddingStart="10dp"
                        android:text="@string/hint_delete_slice_switch"
                        android:textSize="18sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_delete_slices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:checked="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="15dp"
                        app:switchMinWidth="60dp"
                        app:thumbTint="@color/switch_thumb_color"
                        app:trackTint="@color/switch_track_color" />

                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_download_loc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:text="@string/label_download_loc"
                        android:textSize="18sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/label_download_loc"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        app:singleSelection="true">


                        <com.google.android.material.chip.Chip
                            android:id="@+id/btn_loc_inner"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:checked="true"
                            android:text="@string/download_loc_inner" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/btn_loc_outer"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/download_loc_outer" />

                    </com.google.android.material.chip.ChipGroup>

                </RelativeLayout>



            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_start_download"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start_download"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_stop_download"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/stop_download"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

            </com.google.android.material.card.MaterialCardView>

        <!--            <com.google.android.material.button.MaterialButton-->
        <!--                android:id="@+id/btn_stop_downloading"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="@string/stop_downloading"-->
        <!--                android:textSize="20sp"-->
        <!--                android:layout_gravity="center"-->
        <!--                app:backgroundTint="@color/blue_500"-->
        <!--                app:cornerRadius="20dp" />-->




    </LinearLayout>

</LinearLayout>